--- a/Main.html
+++ b/Main.html
@@ -1,6 +1,7 @@
 <html>
+<body style="background-color:powderblue;">
 <head>
-  <title>trying</title>
+  <title>Pictionary</title>
   <script src="elm-canvas.js"></script>
   <script src="Main.js"></script>
 </head>
