--- a/Main.html
+++ b/Main.html
@@ -3,7 +3,7 @@
 <head>
   <title>Pictionary</title>
   <script src="elm-canvas.js"></script>
-  <script src="Main.js"></script>
+  <script src="main.js"></script>
 </head>
 
 <body>
