--- a/Main.html
+++ b/Main.html
@@ -3,16 +3,42 @@
 <head>
   <title>Pictionary</title>
   <script src="elm-canvas.js"></script>
-  <script src="main.js"></script>
+  <script src="Main.js"></script>
 </head>
 
 <body>
   <div id="myapp"></div>
+
+  <!--Firebase stuff-->
+  <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-database.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    var firebaseConfig = {
+      apiKey: "AIzaSyDFxAGl0bZsC4iFZi6rMYolP0rEbdriIiE",
+      authDomain: "pictionary-5281e.firebaseapp.com",
+      databaseURL: "https://pictionary-5281e.firebaseio.com",
+      projectId: "pictionary-5281e",
+      storageBucket: "pictionary-5281e.appspot.com",
+      messagingSenderId: "915429790219",
+      appId: "1:915429790219:web:add7845aca110561486d0e",
+      measurementId: "G-F8QJ2NV7J2"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+
   <script>
   var app = Elm.Main.init({
     node: document.getElementById('myapp'),
     flags: Math.random()
   });
   </script>
+
+  <script src="firebase.js"></script>
+
 </body>
 </html>
