--- a/Main.html
+++ b/Main.html
@@ -17,14 +17,14 @@
   <script>
     // Your web app's Firebase configuration
     var firebaseConfig = {
-      apiKey: "AIzaSyDFxAGl0bZsC4iFZi6rMYolP0rEbdriIiE",
-      authDomain: "pictionary-5281e.firebaseapp.com",
-      databaseURL: "https://pictionary-5281e.firebaseio.com",
-      projectId: "pictionary-5281e",
-      storageBucket: "pictionary-5281e.appspot.com",
-      messagingSenderId: "915429790219",
-      appId: "1:915429790219:web:add7845aca110561486d0e",
-      measurementId: "G-F8QJ2NV7J2"
+    apiKey: "AIzaSyDHW1n-ld4UGUT9e0qZC79pMSRTCI5yvA4",
+    authDomain: "pictionary-333be.firebaseapp.com",
+    databaseURL: "https://pictionary-333be.firebaseio.com",
+    projectId: "pictionary-333be",
+    storageBucket: "pictionary-333be.appspot.com",
+    messagingSenderId: "323505809282",
+    appId: "1:323505809282:web:3885040476eb423b7f919b",
+    measurementId: "G-PXKKMT3ZJR"
     };
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
