--- a/Main.html
+++ b/Main.html
@@ -2,8 +2,41 @@
 <body style="background-color:powderblue;">
 <head>
   <title>Pictionary</title>
-  <script src="elm-canvas.js"></script>
+  <script src="elm-canvas.js" id=></script>
   <script src="Main.js"></script>
+
+  <style type="text/css">
+    body {
+      font-family: 'Open Sans', Arial, sans-serif;
+      font-weight: 525;
+      background-color: #555555
+    }
+
+    .button {
+      color : black;
+      font-family: 'Open Sans', Arial, sans-serif;
+      font-weight: 525;
+      background-color: #white;
+      padding: 10px 24px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+    }
+
+    .input {
+      height : 41px;
+      font-size: 16px;
+      font-family: 'Open Sans', Arial, sans-serif;
+      font-weight: 525
+    }
+
+    .playerheader {
+      font-weight: 600
+    }
+  </style>
+
+
 </head>
 
 <body>
